--- a/package.json
+++ b/package.json
@@ -3,27 +3,28 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start",
-      "lint": "next lint"
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
     },
     "dependencies": {
-      "@ant-design/cssinjs": "^1.17.0",
-      "@emotion/react": "^11.11.1",
-      "@emotion/styled": "^11.11.0",
-      "@mui/material": "^5.14.7",
-      "antd": "^5.8.5",
-      "next": "13.4.19",
-      "next-redux-wrapper": "^8.1.0",
-      "react": "18.2.0",
-      "react-dom": "18.2.0",
-      "react-redux": "^8.1.2",
-      "redux": "^4.2.1",
-      "redux-devtools-extension": "^2.13.9",
-      "redux-logger": "^3.0.6",
-      "redux-persist": "^6.0.0",
-      "reduxjs-toolkit-persist": "^7.2.1"
+        "@ant-design/cssinjs": "^1.17.0",
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@mui/material": "^5.14.7",
+        "@mui/styles": "^5.14.7",
+        "antd": "^5.8.5",
+        "next": "13.4.19",
+        "next-redux-wrapper": "^8.1.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-redux": "^8.1.2",
+        "redux": "^4.2.1",
+        "redux-devtools-extension": "^2.13.9",
+        "redux-logger": "^3.0.6",
+        "redux-persist": "^6.0.0",
+        "redux-thunk": "^2.4.2",
+        "reduxjs-toolkit-persist": "^7.2.1"
     }
-  }
-  
+}
