--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
         "@mui/material": "^5.14.7",
         "@mui/styles": "^5.14.7",
         "antd": "^5.8.5",
+        "axios": "^1.5.0",
         "next": "13.4.19",
         "next-redux-wrapper": "^8.1.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-redux": "^8.1.2",
+        "react-toastify": "^9.1.3",
         "redux": "^4.2.1",
         "redux-devtools-extension": "^2.13.9",
         "redux-logger": "^3.0.6",
