--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev",
+        "dev": " next dev",
         "build": "next build",
         "start": "next start",
         "lint": "next lint"
@@ -14,6 +14,7 @@
         "@emotion/styled": "^11.11.0",
         "@mui/material": "^5.14.7",
         "@mui/styles": "^5.14.7",
+        "@next/env": "^13.4.19",
         "antd": "^5.8.5",
         "axios": "^1.5.0",
         "next": "13.4.19",
