--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "axios": "^1.5.0",
         "next": "13.4.19",
         "next-redux-wrapper": "^8.1.0",
+        "next-router": "^1.3.6",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-redux": "^8.1.2",
