--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "dev": " next dev",
         "build": "next build",
-        "start": "next start",
+        "handleSelectUser": "next handleSelectUser",
         "lint": "next lint"
     },
     "dependencies": {
