--- a/package.json
+++ b/package.json
@@ -1,34 +1,44 @@
 {
-    "name": "sep",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": " next dev",
-        "build": "next build",
-        "handleSelectUser": "next handleSelectUser",
-        "lint": "next lint"
-    },
-    "dependencies": {
-        "@ant-design/cssinjs": "^1.17.0",
-        "@emotion/react": "^11.11.1",
-        "@emotion/styled": "^11.11.0",
-        "@mui/material": "^5.14.7",
-        "@mui/styles": "^5.14.7",
-        "@next/env": "^13.4.19",
-        "antd": "^5.8.5",
-        "axios": "^1.5.0",
-        "next": "13.4.19",
-        "next-redux-wrapper": "^8.1.0",
-        "next-router": "^1.3.6",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "react-redux": "^8.1.2",
-        "react-toastify": "^9.1.3",
-        "redux": "^4.2.1",
-        "redux-devtools-extension": "^2.13.9",
-        "redux-logger": "^3.0.6",
-        "redux-persist": "^6.0.0",
-        "redux-thunk": "^2.4.2",
-        "reduxjs-toolkit-persist": "^7.2.1"
-    }
+  "name": "sepproject",
+  "version": "1.0.0",
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+ 
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nadiakhdm/sepProject.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/nadiakhdm/sepProject/issues"
+  },
+  "homepage": "https://github.com/nadiakhdm/sepProject#readme",
+  "scripts": {
+    "dev": " next dev",
+    "build": "next build",
+    "handleSelectUser": "next handleSelectUser",
+    "lint": "next lint"
+},
+  "dependencies": {
+    "@ant-design/cssinjs": "^1.17.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.8",
+    "@mui/styles": "^5.14.7",
+    "antd": "^5.9.0",
+    "next": "^13.4.19",
+    "next-redux-wrapper": "^8.1.0",
+    "next-router": "^1.3.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
+    "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
+    "reduxjs-toolkit-persist": "^7.2.1"
+  }
 }
